[package]
name = "preroller"
version = "0.1.0"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="preoller"
path="src/preroller_main.rs"

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
glium = "0.29.0"
glutin = "0.26.0"
image = "0.23.14"
tokio = { version = "1.3.0", features = ["full"] }
